309683: ci build should run unit tests